--- a/app/src/main/res/layout/dialog_location_sequence.xml
+++ b/app/src/main/res/layout/dialog_location_sequence.xml
@@ -18,6 +18,7 @@
             android:layout_marginHorizontal="16dp"
             android:layout_marginVertical="8dp"
             android:textColor="@color/black"
+            android:gravity="center"
             android:textSize="22sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
